// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render does not show the hours left when over 23 hours away 1`] = `
<div>
  <div
    data-css-1wwvkuu=""
  >
    <section>
      <h1>
        Foo
      </h1>
      <h4>
        HB1234
      </h4>
    </section>
    <section>
      <CopyLink
        value="placeholder"
      />
    </section>
  </div>
  <div
    data-css-1bq0tws=""
  >
    <div
      data-css-1qww4bd=""
    >
      <Element
        label="State Synopsis"
      >
        A bill, fantastic
      </Element>
    </div>
    <div
      data-css-1qww4bd=""
    >
      <Element
        label="Hearing Date"
      >
        <span>
          3/15/17 5:36 AM
        </span>
      </Element>
      <Element
        label="Committee"
      >
        Many Pointed Bills
      </Element>
    </div>
  </div>
  <Actions
    bill={
      Object {
        "committee": Object {
          "name": "Many Pointed Bills",
        },
        "documentNumber": "HB1234",
        "hearing": Object {
          "date": 2017-03-15T10:36:35.500Z,
        },
        "summary": "A bill, fantastic",
        "title": "Foo",
      }
    }
  />
</div>
`;

exports[`#render renders properly 1`] = `
<div>
  <div
    data-css-1wwvkuu=""
  >
    <section>
      <h1>
        Foo
      </h1>
      <h4>
        HB1234
      </h4>
    </section>
    <section>
      <CopyLink
        value="placeholder"
      />
    </section>
  </div>
  <div
    data-css-1bq0tws=""
  >
    <div
      data-css-1qww4bd=""
    >
      <Element
        label="State Synopsis"
      >
        A bill, fantastic
      </Element>
    </div>
    <div
      data-css-1qww4bd=""
    >
      <Element
        label="Hearing Date"
      >
        <span>
          3/14/17 5:24 PM
        </span>
        <span
          data-css-1fo47jf=""
        >
          (11 hours left)
        </span>
      </Element>
      <Element
        label="Committee"
      >
        Many Pointed Bills
      </Element>
    </div>
  </div>
  <Actions
    bill={
      Object {
        "committee": Object {
          "name": "Many Pointed Bills",
        },
        "documentNumber": "HB1234",
        "hearing": Object {
          "date": 2017-03-14T22:24:35.500Z,
        },
        "summary": "A bill, fantastic",
        "title": "Foo",
      }
    }
  />
</div>
`;
